# Object-Oriented-Programming

./: README.md
3dviewer/: 3DViewer.pro  canvas.cpp  canvas.h  draw.cpp  draw.h  errors.h  mainwidget.cpp  mainwidget.h  model.cpp  model.h  point.h  transform.cpp  transform.h  viewer.cpp  viewer.h
3dviewer/models/: pyramid.txt
elevator/: CMakeLists.txt
elevator/main/: mainwidget.cpp  mainwidget.h  mainwidget.ui
lab03/: .gitignore  CMakeLists.txt  exceptions.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  parser.h  viewer.h
lab03/canvas/: BaseCanvas.h  QtCanvas.h  canvas.h  drawer.h
lab03/command/: BaseCommand.h  ModelCommand.h  ParserCommand.h  commands.h
lab03/data/: romb.txt
lab03/main/: main.cpp  mainwidget.cpp  mainwidget.h
lab03/model/: BaseModel.h  CarcaseModel.h  edge.h  model.h  point.h
lab03/parser/: BaseParser.h  CarcaseParser.h
lab03/vector/: _vector.h  vector.h
lab03/vtemplate/: _vector.h  vector.h
mtemplate/: CMakeLists.txt  _iterator.h  _matrix.h  array.h  basematrix.h  exceptions.h  iterator.h  main.cpp  matrix.h
pattern/: _iterator.h  _matrix.h  basematrix.h  iterator.h  main.cpp  matrix.h
vtemplate/: CMakeLists.txt  _vector.h  basevector.h  iterator.h  vector.h
